# covid-case-study

./: .gitignore  .tool-versions  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  docker-compose.yaml  execute_endpoints.sh  gcloud_cheatsheet.md  pyproject.toml
.github/: build.yaml
dags/: simple_http_operator.py  store_covid_delta_dataset.py
helloworld/: main.py  todos.md
src/: Utils.py  db_solution.py  main.py
test/: test_main.py
