[tool.poetry]
name = "covid-case-study"
version = "0.1.0"
description = ""
authors = ["sunnyjain"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
