[tool.poetry]
name = "covid-case-study"
version = "0.1.0"
description = ""
authors = ["sunnyjain"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
pytest = "^7.4.4"
deltalake = "^0.15.1"
dagster = "^1.6.0"
dagster-webserver = "^1.6.0"
httpx = "^0.26.0"
pyspark = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
