[tool.poetry]
name = "covid-case-study"
version = "0.1.0"
description = ""
authors = ["sunnyjain"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = ">=3.11, <3.12"
fastapi = "^0.109.0"
pandas = "^2.1.4"
uvicorn = "^0.25.0"
pytest = "^7.4.4"
requests = "^2.31.0"
deltalake = "^0.15.1"
pyspark = "^3.5.0"
httpx = "^0.26.0"
apache-airflow-providers-apache-spark = "^4.7.0"
apache-airflow = "^2.8.0"
virtualenv = "^20.25.0"
jsonify = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
